--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Bhoomit patel portfolio app build with flutter.">
+  <meta name="description" content="Portfolio app of bhoomit patel build with flutter.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
